Bug 484683 - After transition from Plasma 5 to Plasma 6 Konqi isn't usable with 'Webengine"
Summary: After transition from Plasma 5 to Plasma 6 Konqi isn't usable with 'Webengine"
Status: CLOSED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.1
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2024-03-28 20:08 UTC by Dieter Nützel
Modified: 2024-04-17 14:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dieter Nützel 2024-03-28 20:08:29 UTC
Application: konqueror (24.02.1)

Qt Version: 5.15.13
Frameworks Version: 5.115.0
Operating System: Linux 6.8.2-2.g2daf2c2-default x86_64
Windowing System: X11
Distribution: "openSUSE Tumbleweed"
DrKonqi: 5.27.10 [KCrashBackend]

-- Information about the crash:
Want to change rendering from KHTML -> WebEngine
Click OK/Apply
==> Crash

The crash can be reproduced every time.

-- Backtrace:
Application: Konqueror (konqueror), signal: Segmentation fault

[KCrash Handler]
#4  QString::QString(QString const&) (other=..., this=0x55bd70fb1680) at /usr/include/qt5/QtCore/qstring.h:1090
#5  QList<QString>::node_copy(QList<QString>::Node*, QList<QString>::Node*, QList<QString>::Node*) (src=0x55bd70fa4580, to=0x55c19769e690, from=0x55bd70fb1680, this=0x7fffbb6b58b0) at /usr/include/qt5/QtCore/qlist.h:505
#6  QList<QString>::detach_helper(int) (this=0x7fffbb6b58b0, alloc=<optimized out>) at /usr/include/qt5/QtCore/qlist.h:835
#7  0x00007f6811985b8c in QList<QString>::detach_helper() (this=0x7fffbb6b58b0) at /usr/include/qt5/QtCore/qlist.h:847
#8  QList<QString>::detach() (this=0x7fffbb6b58b0) at /usr/include/qt5/QtCore/qlist.h:178
#9  QList<QString>::detach() (this=0x7fffbb6b58b0) at /usr/include/qt5/QtCore/qlist.h:178
#10 QList<QString>::begin() (this=0x7fffbb6b58b0) at /usr/include/qt5/QtCore/qlist.h:338
#11 KKonqGeneralOptions::save() (this=0x55bdd3a6cfb0) at /usr/src/debug/konqueror-24.02.1/settings/konqhtml/generalopts.cpp:255
#12 0x00007f6821463967 in KCModuleProxy::save() (this=<optimized out>) at /usr/src/debug/kcmutils-5.115.0/src/kcmoduleproxy.cpp:279
#13 0x00007f682146b862 in KCMultiDialogPrivate::apply() (this=<optimized out>) at /usr/src/debug/kcmutils-5.115.0/src/kcmultidialog.cpp:381
#14 0x00007f681f326482 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7fffbb6b5ab0, r=0x55bdd320f2f0, this=0x55bdd42da630) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#15 doActivate<false>(QObject*, int, void**) (sender=0x55bdd3a59330, signal_index=9, argv=0x7fffbb6b5ab0) at kernel/qobject.cpp:3925
#16 0x00007f681f31f0ef in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=sender@entry=0x55bdd3a59330, m=m@entry=0x7f68204c0260 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fffbb6b5ab0) at kernel/qobject.cpp:3985
#17 0x00007f6820096b22 in QAbstractButton::clicked(bool) (this=this@entry=0x55bdd3a59330, _t1=<optimized out>) at .moc/moc_qabstractbutton.cpp:308
#18 0x00007f6820096d8a in QAbstractButtonPrivate::emitClicked() (this=0x55bdd3a59e20) at widgets/qabstractbutton.cpp:416
#19 0x00007f68200985c7 in QAbstractButtonPrivate::click() (this=0x55bdd3a59e20) at widgets/qabstractbutton.cpp:409
#20 0x00007f68200987d7 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) (this=0x55bdd3a59330, e=0x7fffbb6b6040) at widgets/qabstractbutton.cpp:1045
#21 0x00007f681ffe6d48 in QWidget::event(QEvent*) (this=0x55bdd3a59330, event=0x7fffbb6b6040) at kernel/qwidget.cpp:9045
#22 0x00007f681ffa51ae in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=this@entry=0x55bdcf2ecdf0, receiver=receiver@entry=0x55bdd3a59330, e=e@entry=0x7fffbb6b6040) at kernel/qapplication.cpp:3640
#23 0x00007f681ffad5cf in QApplication::notify(QObject*, QEvent*) (this=<optimized out>, receiver=<optimized out>, e=0x7fffbb6b6040) at kernel/qapplication.cpp:3084
#24 0x00007f681f2ee1d8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x55bdd3a59330, event=0x7fffbb6b6040) at kernel/qcoreapplication.cpp:1064
#25 0x00007f681f2ee3ae in QCoreApplication::sendSpontaneousEvent(QObject*, QEvent*) (receiver=<optimized out>, event=<optimized out>) at kernel/qcoreapplication.cpp:1474
#26 0x00007f681ffab93e in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) (receiver=receiver@entry=0x55bdd3a59330, event=event@entry=0x7fffbb6b6040, alienWidget=<optimized out>, nativeWidget=0x55bdd320f2f0, buttonDown=buttonDown@entry=0x7f68204f2330 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2622
#27 0x00007f681ffff80d in QWidgetWindow::handleMouseEvent(QMouseEvent*) (this=this@entry=0x55bdd40ed110, event=event@entry=0x7fffbb6b62f0) at kernel/qwidgetwindow.cpp:684
#28 0x00007f6820002d2f in QWidgetWindow::event(QEvent*) (this=0x55bdd40ed110, event=0x7fffbb6b62f0) at kernel/qwidgetwindow.cpp:300
#29 0x00007f681ffa51ae in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=<optimized out>, receiver=0x55bdd40ed110, e=0x7fffbb6b62f0) at kernel/qapplication.cpp:3640
#30 0x00007f681f2ee1d8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x55bdd40ed110, event=0x7fffbb6b62f0) at kernel/qcoreapplication.cpp:1064
#31 0x00007f681f2ee3ae in QCoreApplication::sendSpontaneousEvent(QObject*, QEvent*) (receiver=<optimized out>, event=<optimized out>) at kernel/qcoreapplication.cpp:1474
#32 0x00007f681f77d18b in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) (e=0x55bdd3a11560) at kernel/qguiapplication.cpp:2285
#33 0x00007f681f7503dc in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1169
#34 0x00007f68196f951a in xcbSourceDispatch(GSource*, GSourceFunc, gpointer) (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#35 0x00007f681ce73710 in  () at /lib64/libglib-2.0.so.0
#36 0x00007f681ce75358 in  () at /lib64/libglib-2.0.so.0
#37 0x00007f681ce75a0c in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#38 0x00007f681f347116 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x55bdcf487ce0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#39 0x00007f681f2ecc6b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fffbb6b6620, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#40 0x00007f681f2f5100 in QCoreApplication::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#41 0x00007f681f77062c in QGuiApplication::exec() () at kernel/qguiapplication.cpp:1870
#42 0x00007f681ffa5125 in QApplication::exec() () at kernel/qapplication.cpp:2832
#43 0x00007f6821574f89 in KonquerorApplication::startFirstInstance() (this=0x7fffbb6b6740) at /usr/src/debug/konqueror-24.02.1/src/konqapplication.cpp:272
#44 KonquerorApplication::start() (this=0x7fffbb6b6740) at /usr/src/debug/konqueror-24.02.1/src/konqapplication.cpp:335
#45 KonquerorApplication::start() (this=0x7fffbb6b6740) at /usr/src/debug/konqueror-24.02.1/src/konqapplication.cpp:298
#46 kdemain(int, char**) (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/konqueror-24.02.1/src/konqmain.cpp:18
#47 0x00007f682122a1f0 in __libc_start_call_main () at /lib64/libc.so.6
#48 0x00007f682122a2b9 in __libc_start_main_impl () at /lib64/libc.so.6
#49 0x000055bdcebc5095 in _start () at ../sysdeps/x86_64/start.S:115
[Inferior 1 (process 3296) detached]

Reported using DrKonqi
Comment 1 Bug Janitor Service 2024-04-01 07:54:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/314
Comment 2 Stefano Crocco 2024-04-01 07:59:34 UTC
Git commit 8ddc27d773e40cb9457350927c96024885038da0 by Stefano Crocco.
Committed on 01/04/2024 at 07:59.
Pushed by stefanocrocco into branch 'master'.

Fix crash when choosing the default web engine

M  +1    -1    settings/konqhtml/generalopts.cpp

https://invent.kde.org/network/konqueror/-/commit/8ddc27d773e40cb9457350927c96024885038da0
Comment 3 Stefano Crocco 2024-04-01 08:19:33 UTC
Git commit f67cf6801febd305a68a7a4e37ac346f8848d03c by Stefano Crocco.
Committed on 01/04/2024 at 08:19.
Pushed by stefanocrocco into branch 'release/24.02'.

Fix crash when choosing the default web engine


(cherry picked from commit 8ddc27d773e40cb9457350927c96024885038da0)

7ee50533     Fix crash when choosing the default web engine

M  +1    -1    settings/konqhtml/generalopts.cpp

https://invent.kde.org/network/konqueror/-/commit/f67cf6801febd305a68a7a4e37ac346f8848d03c
Comment 4 Dieter Nützel 2024-04-17 14:41:40 UTC
Thank you very much Stefano,

WebGL is working, again.