Fix crash when choosing the default web engine

BUG: 484683


(cherry picked from commit 8ddc27d773e40cb9457350927c96024885038da0)

7ee50533     Fix crash when choosing the default web engine